k8s/app/middleware-stripprefix-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-ingressroute-prefix
spec:
  stripPrefix:
    prefixes:
      - /ingressroute-prefix/
