k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iona-app
  labels:
    app: iona-app
    app.kubernetes.io/name: iona-app
spec:
  ports:
    - name: http
      port: 80
  clusterIP: None
  selector:
    app: iona-app
